styles/navbar.css
/*
    This file handles the design of the navbar found in
    every page.
*/

.top_navbar {
    display:flex;
    background-color: #023047;
    overflow:hidden;
    /* This fixes the navbar to the top of screen */
    position: fixed;
    top: 0;
    
    height: auto;
    width: 100%;
    z-index: 1;

    /*box-shadow: 0px 22px 30px -10px #023047;*/
    font-family: 'Segoe UI';
}

.top_navbar a {
    float: left;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.top_navbar a:hover {
    background-color:#fb8500;
    color:white;
}

.top_navbar a.active {
    background-color: #0d425d;
    color: #ffb703;
}

#nav-icon {
    display: flex;
    align-items: center;

    min-height: 50px;
    height: 50px;

    margin: auto 8px;
}

#search-bar {
    margin: auto 8px;
}

#top-profile {
    margin-left: auto;
    float: right;
    color: white;
    text-align: center;
    font-size: 17px;
}

